Wrist.cydsn/REBUILD.log
--------------- Rebuild Started: 05/27/2020 14:45:31 Project: main_cm4.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m4 -mfloat-abi=softfp -mfpu=fpv4-sp-d16 -mthumb -I. -IGenerated_Source\PSoC6 -IGenerated_Source\PSoC6\pdl\cmsis/include/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/include/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/include/ip/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/device/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/efuse/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/flash/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/gpio/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/ipc/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/lvd/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/profile/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/prot/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/scb/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/sysanalog/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/sysclk/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/sysint/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/syslib/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/syspm/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/systick/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/trigmux/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/wdt/ -IGenerated_Source\PSoC6\pdl\middleware/ -Wa,-alh=.\CortexM4\ARM_GCC_541\Debug/main_cm4.lst -g -D DEBUG -D CY_CORE_ID=0 -D CY_PSOC_CREATOR_USED=1 -D CYBLE_416045_02 -Wall -ffunction-sections -ffat-lto-objects -Og -c main_cm4.c -o .\CortexM4\ARM_GCC_541\Debug\main_cm4.o
main_cm4.c: In function 'StackEventHandler':
main_cm4.c:53:41: warning: unused variable 'myHvp' [-Wunused-variable]
     cy_stc_ble_gatt_handle_value_pair_t myHvp;
                                         ^
main_cm4.c:52:45: warning: unused variable 'writeReqParameter' [-Wunused-variable]
     cy_stc_ble_gatts_write_cmd_req_param_t *writeReqParameter;
                                             ^
In file included from Generated_Source\PSoC6\pdl\devices/psoc6/include/cyble_416045_02.h:439:0,
                 from Generated_Source\PSoC6/project.h:17,
                 from main_cm4.c:1:
main_cm4.c: In function 'main':
main_cm4.c:310:110: error: 'new_advmap' undeclared (first use in this function)
     BLE->BLELL.SCAN_CONFIG = _CLR_SET_FLD32U(BLE->BLELL.SCAN_CONFIG, BLE_BLELL_SCAN_CONFIG_SCAN_CHANNEL_MAP, new_advmap);
                                                                                                              ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1530:48: note: in definition of macro '_VAL2FLD'
 #define _VAL2FLD(field, value)    (((uint32_t)(value) << field ## _Pos) & field ## _Msk)
                                                ^
main_cm4.c:310:30: note: in expansion of macro '_CLR_SET_FLD32U'
     BLE->BLELL.SCAN_CONFIG = _CLR_SET_FLD32U(BLE->BLELL.SCAN_CONFIG, BLE_BLELL_SCAN_CONFIG_SCAN_CHANNEL_MAP, new_advmap);
                              ^
main_cm4.c:310:110: note: each undeclared identifier is reported only once for each function it appears in
     BLE->BLELL.SCAN_CONFIG = _CLR_SET_FLD32U(BLE->BLELL.SCAN_CONFIG, BLE_BLELL_SCAN_CONFIG_SCAN_CHANNEL_MAP, new_advmap);
                                                                                                              ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1530:48: note: in definition of macro '_VAL2FLD'
 #define _VAL2FLD(field, value)    (((uint32_t)(value) << field ## _Pos) & field ## _Msk)
                                                ^
main_cm4.c:310:30: note: in expansion of macro '_CLR_SET_FLD32U'
     BLE->BLELL.SCAN_CONFIG = _CLR_SET_FLD32U(BLE->BLELL.SCAN_CONFIG, BLE_BLELL_SCAN_CONFIG_SCAN_CHANNEL_MAP, new_advmap);
                              ^
main_cm4.c:311:49: error: 'CY_BLE_CENTRAL_CONFIGURATION_0_INDEX' undeclared (first use in this function)
     Cy_BLE_GAPC_StartScan(CY_BLE_SCANNING_FAST, CY_BLE_CENTRAL_CONFIGURATION_0_INDEX);
                                                 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 05/27/2020 14:45:33 ---------------
